--- a/firebase/www/pages/firestore/cadastro/cadastroCliente.html
+++ b/firebase/www/pages/firestore/cadastro/cadastroCliente.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="row">
                   <div class="mb-2 col-sm-12">
-                    <input type="text" class="form-control" id="dateInput">
+                    <input type="date" class="form-control" id="dateInput">
                   </div>
                 </div>
                 <div class="mb-2 row">
